--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav pull-right">
 					<li><a href="/">Inicio</a></li>
-					<li><a href="login.html">Login</a></li>
+					<li><a id="login-btn" href="login.html">Login</a></li>
 					<li id="exit-item" style="display: none;" class="dropdown">
 						<a href="exit">Exit</a>
 					</li>
